cluster/apps/default/guacamole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app: guacamole
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole:1.4.0 # {"$imagepolicy": "flux-system:guacamole"}
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
