cluster/apps/default/guacamole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  labels:
    app: guacamole
spec:
  ports:
    - port: 8080
  selector:
    app: guacamole
